{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 261,
  "lineage": "1671a94b-1300-993e-724e-05eb2ab2bccf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "chewbacca_nat_eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03bfb2d937c32fbbc",
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:elastic-ip/eipalloc-03bfb2d937c32fbbc",
            "association_id": "eipassoc-0cd50c4fb08d25bcf",
            "domain": "vpc",
            "id": "eipalloc-03bfb2d937c32fbbc",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0be891686db1509fa",
            "private_dns": "ip-10-17-1-22.ap-northeast-1.compute.internal",
            "private_ip": "10.17.1.22",
            "public_dns": "ec2-54-95-236-142.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.95.236.142",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "lew-nat-eip01"
            },
            "tags_all": {
              "Name": "lew-nat-eip01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "chewbacca_ec201",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03d1820163e6b9f5d",
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:instance/i-0c5d621eaf3a08512",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "lew-instance-profile01",
            "id": "i-0c5d621eaf3a08512",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e553679db2e6672f"
              }
            ],
            "primary_network_interface_id": "eni-0e553679db2e6672f",
            "private_dns": "ip-10-17-1-100.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.17.1.100",
            "public_dns": "ec2-18-183-229-40.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.183.229.40",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06ec3d984abf12769",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-009458617990398dc",
            "tags": {
              "Name": "lew-ec201"
            },
            "tags_all": {
              "Name": "lew-ec201"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d1ff8efbd11d40c"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "id": "i-0c5d621eaf3a08512",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.chewbacca_instance_profile01",
            "aws_iam_role.chewbacca_ec2_role01",
            "aws_secretsmanager_secret.chewbacca_db_secret01",
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "chewbacca_ec201_private_bonus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03d1820163e6b9f5d",
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:instance/i-07b29863a3989bb58",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "lew-instance-profile01",
            "id": "i-07b29863a3989bb58",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f62ed39ae5182ba2"
              }
            ],
            "primary_network_interface_id": "eni-0f62ed39ae5182ba2",
            "private_dns": "ip-10-17-11-40.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.17.11.40",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-051057e41a2d2dff0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0763eb4614e21ea66",
            "tags": {
              "Name": "lew-ec201-private"
            },
            "tags_all": {
              "Name": "lew-ec201-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d1ff8efbd11d40c"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "id": "i-07b29863a3989bb58",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.chewbacca_instance_profile01",
            "aws_iam_role.chewbacca_ec2_role01",
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "chewbacca_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:internet-gateway/igw-0b4b76da9e3882169",
            "id": "igw-0b4b76da9e3882169",
            "owner_id": "620812304994",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "lew-igw01"
            },
            "tags_all": {
              "Name": "lew-igw01"
            },
            "vpc_id": "vpc-0e69c2a5e1fea450c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "chewbacca_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "lew-alb-logs-620812304994",
                "enabled": true,
                "prefix": "alb-access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:620812304994:loadbalancer/app/lew-alb01/5bacfef0e722326b",
            "arn_suffix": "app/lew-alb01/5bacfef0e722326b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lew-alb01-604473024.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:620812304994:loadbalancer/app/lew-alb01/5bacfef0e722326b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lew-alb01",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-04745bee209f43d4e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-009458617990398dc"
              },
              {
                "subnet_id": "subnet-0825f48986e3bb5df"
              }
            ],
            "subnets": [
              "subnet-009458617990398dc",
              "subnet-0825f48986e3bb5df"
            ],
            "tags": {
              "Name": "lew-alb01"
            },
            "tags_all": {
              "Name": "lew-alb01"
            },
            "vpc_id": "vpc-0e69c2a5e1fea450c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:620812304994:loadbalancer/app/lew-alb01/5bacfef0e722326b"
          },
          "dependencies": [
            "aws_s3_bucket.chewbacca_alb_logs_bucket01",
            "aws_security_group.chewbacca_alb_sg01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_caller_identity.chewbacca_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "chewbacca_http_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:620812304994:listener/app/lew-alb01/5bacfef0e722326b/dc0192f5d32663f1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:620812304994:listener/app/lew-alb01/5bacfef0e722326b/dc0192f5d32663f1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:620812304994:loadbalancer/app/lew-alb01/5bacfef0e722326b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:620812304994:listener/app/lew-alb01/5bacfef0e722326b/dc0192f5d32663f1"
          },
          "dependencies": [
            "aws_lb.chewbacca_alb01",
            "aws_s3_bucket.chewbacca_alb_logs_bucket01",
            "aws_security_group.chewbacca_alb_sg01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_caller_identity.chewbacca_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "chewbacca_https_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:620812304994:listener/app/lew-alb01/5bacfef0e722326b/313c0127bd5c4dd6",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:620812304994:certificate/bf09fcc7-c028-40ba-9363-33d43c982141",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:620812304994:targetgroup/lew-tg01/859f45e80f1a159f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:620812304994:listener/app/lew-alb01/5bacfef0e722326b/313c0127bd5c4dd6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:620812304994:loadbalancer/app/lew-alb01/5bacfef0e722326b",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:620812304994:listener/app/lew-alb01/5bacfef0e722326b/313c0127bd5c4dd6"
          },
          "dependencies": [
            "aws_acm_certificate.chewbacca_acm_cert01",
            "aws_acm_certificate_validation.chewbacca_acm_validation01_dns_bonus",
            "aws_lb.chewbacca_alb01",
            "aws_lb_target_group.chewbacca_tg01",
            "aws_route53_record.chewbacca_acm_validation_records01",
            "aws_route53_zone.chewbacca_zone01",
            "aws_s3_bucket.chewbacca_alb_logs_bucket01",
            "aws_security_group.chewbacca_alb_sg01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_caller_identity.chewbacca_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "chewbacca_tg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:620812304994:targetgroup/lew-tg01/859f45e80f1a159f",
            "arn_suffix": "targetgroup/lew-tg01/859f45e80f1a159f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:620812304994:targetgroup/lew-tg01/859f45e80f1a159f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:620812304994:loadbalancer/app/lew-alb01/5bacfef0e722326b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lew-tg01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lew-tg01"
            },
            "tags_all": {
              "Name": "lew-tg01"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e69c2a5e1fea450c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:620812304994:targetgroup/lew-tg01/859f45e80f1a159f"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "chewbacca_tg_attach01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:620812304994:targetgroup/lew-tg01/859f45e80f1a159f-2026012402224309280000000f",
            "port": 80,
            "region": "ap-northeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:620812304994:targetgroup/lew-tg01/859f45e80f1a159f",
            "target_id": "i-07b29863a3989bb58"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.chewbacca_instance_profile01",
            "aws_iam_role.chewbacca_ec2_role01",
            "aws_instance.chewbacca_ec201_private_bonus",
            "aws_lb_target_group.chewbacca_tg01",
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "chewbacca_nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03bfb2d937c32fbbc",
            "association_id": "eipassoc-0cd50c4fb08d25bcf",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0f86667252afeeb7b",
            "network_interface_id": "eni-0be891686db1509fa",
            "private_ip": "10.17.1.22",
            "public_ip": "54.95.236.142",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-009458617990398dc",
            "tags": {
              "Name": "lew-nat01"
            },
            "tags_all": {
              "Name": "lew-nat01"
            },
            "vpc_id": "vpc-0e69c2a5e1fea450c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.chewbacca_nat_eip01",
            "aws_internet_gateway.chewbacca_igw01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "chewbacca_private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05990cf2335848e2c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f86667252afeeb7b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-05990cf2335848e2c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-05990cf2335848e2c"
          },
          "dependencies": [
            "aws_eip.chewbacca_nat_eip01",
            "aws_internet_gateway.chewbacca_igw01",
            "aws_nat_gateway.chewbacca_nat01",
            "aws_route_table.chewbacca_private_rt01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "chewbacca_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b4b76da9e3882169",
            "id": "r-rtb-0c1847f233ba3a8361080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0c1847f233ba3a836",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0c1847f233ba3a836"
          },
          "dependencies": [
            "aws_internet_gateway.chewbacca_igw01",
            "aws_route_table.chewbacca_public_rt01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "chewbacca_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:route-table/rtb-05990cf2335848e2c",
            "id": "rtb-05990cf2335848e2c",
            "owner_id": "620812304994",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f86667252afeeb7b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lew-private-rt01"
            },
            "tags_all": {
              "Name": "lew-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e69c2a5e1fea450c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "id": "rtb-05990cf2335848e2c",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "chewbacca_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:route-table/rtb-0c1847f233ba3a836",
            "id": "rtb-0c1847f233ba3a836",
            "owner_id": "620812304994",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b4b76da9e3882169",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lew-public-rt01"
            },
            "tags_all": {
              "Name": "lew-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e69c2a5e1fea450c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "id": "rtb-0c1847f233ba3a836",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chewbacca_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d27704b452c81a17",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-05990cf2335848e2c",
            "subnet_id": "subnet-0763eb4614e21ea66"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.chewbacca_private_rt01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cd0dd22663fbde8",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-05990cf2335848e2c",
            "subnet_id": "subnet-0e25bf6955aba2bf8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.chewbacca_private_rt01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chewbacca_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba6dd8eead623a15",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0c1847f233ba3a836",
            "subnet_id": "subnet-009458617990398dc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.chewbacca_public_rt01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0039f850af398458a",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0c1847f233ba3a836",
            "subnet_id": "subnet-0825f48986e3bb5df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.chewbacca_public_rt01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chewbacca_alb_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:security-group/sg-04745bee209f43d4e",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "10.17.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-04745bee209f43d4e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lew-alb-sg01",
            "name_prefix": "",
            "owner_id": "620812304994",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lew-alb-sg01"
            },
            "tags_all": {
              "Name": "lew-alb-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e69c2a5e1fea450c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "id": "sg-04745bee209f43d4e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chewbacca_ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:security-group/sg-05d1ff8efbd11d40c",
            "description": "EC2 app security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d1ff8efbd11d40c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04745bee209f43d4e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lew-ec2-sg01",
            "name_prefix": "",
            "owner_id": "620812304994",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lew-ec2-sg01"
            },
            "tags_all": {
              "Name": "lew-ec2-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e69c2a5e1fea450c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "id": "sg-05d1ff8efbd11d40c",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chewbacca_rds_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:security-group/sg-05eca073c1193182d",
            "description": "RDS security group",
            "egress": [],
            "id": "sg-05eca073c1193182d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL traffic",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05d1ff8efbd11d40c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "lew-rds-sg01",
            "name_prefix": "",
            "owner_id": "620812304994",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lew-rds-sg01"
            },
            "tags_all": {
              "Name": "lew-rds-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e69c2a5e1fea450c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "id": "sg-05eca073c1193182d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chewbacca_vpce_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:security-group/sg-017123c0ef80e813a",
            "description": "SG for VPC Interface Endpoints",
            "egress": [],
            "id": "sg-017123c0ef80e813a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05d1ff8efbd11d40c"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "lew-vpce-sg01",
            "name_prefix": "",
            "owner_id": "620812304994",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lew-vpce-sg01"
            },
            "tags_all": {
              "Name": "lew-vpce-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e69c2a5e1fea450c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "id": "sg-017123c0ef80e813a",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_egress_to_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.17.0.0/16"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-4161159660",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-04745bee209f43d4e",
            "security_group_rule_id": "sgr-0b31509bda2bc00f2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.chewbacca_alb_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2521657653",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-04745bee209f43d4e",
            "security_group_rule_id": "sgr-08be7380d8a9b6975",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.chewbacca_alb_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-588281763",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-04745bee209f43d4e",
            "security_group_rule_id": "sgr-0a5056f2cdeac6711",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.chewbacca_alb_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "chewbacca_ec2_ingress_from_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-681783626",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-05d1ff8efbd11d40c",
            "security_group_rule_id": "sgr-02d9e2b6581d31100",
            "self": false,
            "source_security_group_id": "sg-04745bee209f43d4e",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.chewbacca_alb_sg01",
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "endpoint_ingress_from_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-2342526932",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-017123c0ef80e813a",
            "security_group_rule_id": "sgr-0862852aa43103037",
            "self": false,
            "source_security_group_id": "sg-05d1ff8efbd11d40c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_security_group.chewbacca_vpce_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chewbacca_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:subnet/subnet-0763eb4614e21ea66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.17.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0763eb4614e21ea66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "620812304994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "lew-private-subnet01"
            },
            "tags_all": {
              "Name": "lew-private-subnet01"
            },
            "vpc_id": "vpc-0e69c2a5e1fea450c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "id": "subnet-0763eb4614e21ea66",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:subnet/subnet-0e25bf6955aba2bf8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.17.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e25bf6955aba2bf8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "620812304994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "lew-private-subnet02"
            },
            "tags_all": {
              "Name": "lew-private-subnet02"
            },
            "vpc_id": "vpc-0e69c2a5e1fea450c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "id": "subnet-0e25bf6955aba2bf8",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chewbacca_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:subnet/subnet-009458617990398dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.17.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009458617990398dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "620812304994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "lew-public-subnet01"
            },
            "tags_all": {
              "Name": "lew-public-subnet01"
            },
            "vpc_id": "vpc-0e69c2a5e1fea450c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "id": "subnet-009458617990398dc",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:subnet/subnet-0825f48986e3bb5df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.17.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0825f48986e3bb5df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "620812304994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "lew-public-subnet02"
            },
            "tags_all": {
              "Name": "lew-public-subnet02"
            },
            "vpc_id": "vpc-0e69c2a5e1fea450c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "id": "subnet-0825f48986e3bb5df",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "chewbacca_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:vpc/vpc-0e69c2a5e1fea450c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.17.0.0/16",
            "default_network_acl_id": "acl-0b46c2923fa671864",
            "default_route_table_id": "rtb-025e95190ebfd58b1",
            "default_security_group_id": "sg-0d32e9a46d011f614",
            "dhcp_options_id": "dopt-020e2b31cbdefcc07",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e69c2a5e1fea450c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-025e95190ebfd58b1",
            "owner_id": "620812304994",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "lew-vpc01"
            },
            "tags_all": {
              "Name": "lew-vpc01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "id": "vpc-0e69c2a5e1fea450c",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chewbacca_vpce_ec2messages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:vpc-endpoint/vpce-0b86094f0bfdd7fb4",
            "dns_entry": [
              {
                "dns_name": "vpce-0b86094f0bfdd7fb4-fkbfcexw.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0b86094f0bfdd7fb4-fkbfcexw-ap-northeast-1a.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0b86094f0bfdd7fb4-fkbfcexw-ap-northeast-1c.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ec2messages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z02691042IMFF9ZC6SRN2"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b86094f0bfdd7fb4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-022db155824956e9c",
              "eni-0937e89da44d2207d"
            ],
            "owner_id": "620812304994",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-017123c0ef80e813a"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ec2messages",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.17.11.173",
                "subnet_id": "subnet-0763eb4614e21ea66"
              },
              {
                "ipv4": "10.17.12.235",
                "subnet_id": "subnet-0e25bf6955aba2bf8"
              }
            ],
            "subnet_ids": [
              "subnet-0763eb4614e21ea66",
              "subnet-0e25bf6955aba2bf8"
            ],
            "tags": {
              "Name": "lew-vpce-ec2messages01"
            },
            "tags_all": {
              "Name": "lew-vpce-ec2messages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e69c2a5e1fea450c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "id": "vpce-0b86094f0bfdd7fb4",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_vpce_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_region.chewbacca_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chewbacca_vpce_kms01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:vpc-endpoint/vpce-0fa30925fc5364005",
            "dns_entry": [
              {
                "dns_name": "vpce-0fa30925fc5364005-gpdrwqbj.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0fa30925fc5364005-gpdrwqbj-ap-northeast-1a.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0fa30925fc5364005-gpdrwqbj-ap-northeast-1c.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "kms.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z02683831ZTEEONVWEBYB"
              },
              {
                "dns_name": "kms.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z0123250WLEVYD5J43GB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0fa30925fc5364005",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07387fbbeda6424ee",
              "eni-08e8387585f3fbc1b"
            ],
            "owner_id": "620812304994",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-017123c0ef80e813a"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.kms",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.17.11.198",
                "subnet_id": "subnet-0763eb4614e21ea66"
              },
              {
                "ipv4": "10.17.12.254",
                "subnet_id": "subnet-0e25bf6955aba2bf8"
              }
            ],
            "subnet_ids": [
              "subnet-0763eb4614e21ea66",
              "subnet-0e25bf6955aba2bf8"
            ],
            "tags": {
              "Name": "lew-vpce-kms01"
            },
            "tags_all": {
              "Name": "lew-vpce-kms01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e69c2a5e1fea450c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "id": "vpce-0fa30925fc5364005",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_vpce_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_region.chewbacca_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chewbacca_vpce_logs01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:vpc-endpoint/vpce-0567e989da096c6af",
            "dns_entry": [
              {
                "dns_name": "vpce-0567e989da096c6af-djvj6knm.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0567e989da096c6af-djvj6knm-ap-northeast-1c.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0567e989da096c6af-djvj6knm-ap-northeast-1a.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z01308941APSOL7BGWZIF"
              },
              {
                "dns_name": "logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z013017539JLPDRZPDLLG"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z01309282NKWMNGQJ5JDB"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z029633838B4NXVQT2K6H"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0567e989da096c6af",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01178a8c27a89e8c8",
              "eni-04a459d0963db95f5"
            ],
            "owner_id": "620812304994",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-017123c0ef80e813a"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.logs",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.17.11.43",
                "subnet_id": "subnet-0763eb4614e21ea66"
              },
              {
                "ipv4": "10.17.12.86",
                "subnet_id": "subnet-0e25bf6955aba2bf8"
              }
            ],
            "subnet_ids": [
              "subnet-0763eb4614e21ea66",
              "subnet-0e25bf6955aba2bf8"
            ],
            "tags": {
              "Name": "lew-vpce-logs01"
            },
            "tags_all": {
              "Name": "lew-vpce-logs01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e69c2a5e1fea450c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "id": "vpce-0567e989da096c6af",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_vpce_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_region.chewbacca_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chewbacca_vpce_s3_gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:vpc-endpoint/vpce-0455c665269a37c03",
            "cidr_blocks": [
              "3.5.152.0/21",
              "52.219.162.0/23",
              "52.219.0.0/20",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.172.0/22",
              "52.219.20.0/23",
              "52.219.195.0/24",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.68.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0455c665269a37c03",
            "ip_address_type": "ipv4",
            "owner_id": "620812304994",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-05990cf2335848e2c"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "service_region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "lew-vpce-s3-gw01"
            },
            "tags_all": {
              "Name": "lew-vpce-s3-gw01"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0e69c2a5e1fea450c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "id": "vpce-0455c665269a37c03",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_route_table.chewbacca_private_rt01",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_region.chewbacca_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chewbacca_vpce_secrets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:vpc-endpoint/vpce-0c28c7acabc78dd4f",
            "dns_entry": [
              {
                "dns_name": "vpce-0c28c7acabc78dd4f-h4e9x2d2.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0c28c7acabc78dd4f-h4e9x2d2-ap-northeast-1c.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0c28c7acabc78dd4f-h4e9x2d2-ap-northeast-1a.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "secretsmanager.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0296566W6RE5WEA94RE"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c28c7acabc78dd4f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02b0e44e433b5adb8",
              "eni-03e9e4ce91c4580d5"
            ],
            "owner_id": "620812304994",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-017123c0ef80e813a"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.secretsmanager",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.17.11.237",
                "subnet_id": "subnet-0763eb4614e21ea66"
              },
              {
                "ipv4": "10.17.12.67",
                "subnet_id": "subnet-0e25bf6955aba2bf8"
              }
            ],
            "subnet_ids": [
              "subnet-0763eb4614e21ea66",
              "subnet-0e25bf6955aba2bf8"
            ],
            "tags": {
              "Name": "lew-vpce-secrets01"
            },
            "tags_all": {
              "Name": "lew-vpce-secrets01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e69c2a5e1fea450c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "id": "vpce-0c28c7acabc78dd4f",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_vpce_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_region.chewbacca_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chewbacca_vpce_ssm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:vpc-endpoint/vpce-03b0908f5da92fe27",
            "dns_entry": [
              {
                "dns_name": "vpce-03b0908f5da92fe27-7rita23q.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-03b0908f5da92fe27-7rita23q-ap-northeast-1a.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-03b0908f5da92fe27-7rita23q-ap-northeast-1c.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssm.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z039373920T7L0Q3V1J7H"
              },
              {
                "dns_name": "ssm.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z0267807177F213PCV3FJ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03b0908f5da92fe27",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0b0eedae13c05837b",
              "eni-0e5dd2a07d0ba6ea3"
            ],
            "owner_id": "620812304994",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-017123c0ef80e813a"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssm",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.17.11.76",
                "subnet_id": "subnet-0763eb4614e21ea66"
              },
              {
                "ipv4": "10.17.12.219",
                "subnet_id": "subnet-0e25bf6955aba2bf8"
              }
            ],
            "subnet_ids": [
              "subnet-0763eb4614e21ea66",
              "subnet-0e25bf6955aba2bf8"
            ],
            "tags": {
              "Name": "lew-vpce-ssm01"
            },
            "tags_all": {
              "Name": "lew-vpce-ssm01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e69c2a5e1fea450c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "id": "vpce-03b0908f5da92fe27",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_vpce_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_region.chewbacca_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chewbacca_vpce_ssmmessages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:vpc-endpoint/vpce-0ab517041e6cd2635",
            "dns_entry": [
              {
                "dns_name": "vpce-0ab517041e6cd2635-rku4ks2o.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0ab517041e6cd2635-rku4ks2o-ap-northeast-1a.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0ab517041e6cd2635-rku4ks2o-ap-northeast-1c.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z02690453CQD6EK7K4BYU"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z03942431M2AASEHWIKVY"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ab517041e6cd2635",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-043bce9e89d2be27b",
              "eni-0d644da911f80e93d"
            ],
            "owner_id": "620812304994",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-017123c0ef80e813a"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssmmessages",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.17.11.102",
                "subnet_id": "subnet-0763eb4614e21ea66"
              },
              {
                "ipv4": "10.17.12.47",
                "subnet_id": "subnet-0e25bf6955aba2bf8"
              }
            ],
            "subnet_ids": [
              "subnet-0763eb4614e21ea66",
              "subnet-0e25bf6955aba2bf8"
            ],
            "tags": {
              "Name": "lew-vpce-ssmmessages01"
            },
            "tags_all": {
              "Name": "lew-vpce-ssmmessages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e69c2a5e1fea450c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "id": "vpce-0ab517041e6cd2635",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_vpce_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_region.chewbacca_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:security-group-rule/sgr-0209cdc94e74f1811",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0209cdc94e74f1811",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-05d1ff8efbd11d40c",
            "security_group_rule_id": "sgr-0209cdc94e74f1811",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "id": "sgr-0209cdc94e74f1811",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:security-group-rule/sgr-0bb87b12322d246f7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTP traffic",
            "from_port": 80,
            "id": "sgr-0bb87b12322d246f7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-05d1ff8efbd11d40c",
            "security_group_rule_id": "sgr-0bb87b12322d246f7",
            "tags": {
              "Name": "lew-http"
            },
            "tags_all": {
              "Name": "lew-http"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "id": "sgr-0bb87b12322d246f7",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620812304994:security-group-rule/sgr-0b4d86d6277dc6bb3",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow MySQL traffic",
            "from_port": 3306,
            "id": "sgr-0b4d86d6277dc6bb3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-05d1ff8efbd11d40c",
            "region": "ap-northeast-1",
            "security_group_id": "sg-05eca073c1193182d",
            "security_group_rule_id": "sgr-0b4d86d6277dc6bb3",
            "tags": {
              "Name": "lew-mysql"
            },
            "tags_all": {
              "Name": "lew-mysql"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620812304994",
            "id": "sgr-0b4d86d6277dc6bb3",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_security_group.chewbacca_rds_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    }
  ]
}